--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MySQL 상세 지정
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=none
+
+server.port=5000
